..F....... [ZBX-7250] made gettext an optional feature for the frontend (Pavels)
A.F....... [ZBX-1357] updated Brazilian Portuguese, French, Italian, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)

Bug fixes:
..F....... [ZBX-7350] fixed displaying host prototypes in "Status of Zabbix" (Ivo)
.......PS. [ZBXNEXT-98] refactored code for SNMP checks (asaveljevs, Sasha)
........S. [ZBX-7184] added check to prevent host from being switched to unavailable state multiple times in a row (wiper)
A......... [ZBX-7351] fixed screen item not being saved if resource type is URL (Ivo)
........S. [ZBX-7329] fixed VMware related compiling error on FreeBSD (wiper)
........S. [ZBX-7359] fixed possible crash when parsing VMware datastore data (wiper)
........S. [ZBX-7309] fixed resolving of {ITEM.VALUE} macro in recovery messages (Andris, Sasha)
..F....... [ZBX-7254] fixed selected tab not being reset when opening the host mass update form (Pavels)
A.F....... [ZBX-7316] fixed drule.delete method (Ivo)
A.F....... [ZBX-7293] fixed typo in the plural form of a translatable string (Richlv)
..F....... [ZBX-7307] improved validation for copying graph (Eduard)
..F....... [ZBX-7325] fixed parent LLD rule link color in the darkblue and darkorange themes (Pavels)
..F....... [ZBX-7311] fixed dragging of host interfaces (Ivo)
..F....... [ZBX-7272] fixed graph's grid with fixed Y axis MIN/MAX values (Eduard)
...G...... [ZBX-2008] added support of Audit Success/Failure severity for Windows Security log (igors)
...G...... [ZBX-2008] implemented automatic loading of wevtapi.dll file and its functions (igors)
...G...... [ZBX-2008] improved performance of eventlog monitoring (igors)
..F....... [ZBX-7263] fixed validation of filter parameters in tr_status.php (Eduard)
..F....... [ZBX-7303] removed link to item configuration for discovered items in latest data screen (Eduard)